--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,25 +1,33 @@
-<div class="md:px-5 pl-3">
+<div class="md:pr-5 pl-3">
 	<% @events.group_by { |e| e.start_time.strftime("%Y-%m-%d") }.each do |group| %>
-		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="border-gray-300 border-l ml-3 pb-10 relative">
-			<div class="<%= helpers.class_names('bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 md:px-5 pb-3 pl-5 pt-2 md:pt-7 sticky text-gray-600 z-10',
+		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="ml-2 mb-5 relative">
+			<div class="<%= helpers.class_names('bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 md:px-5 pb-3 mb-3 pl-5 pt-2 md:pt-7 sticky text-gray-600 z-10',
 																					{ 'top-16 pt-5':  helpers.mobile_device?,
 																						'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-36': !helpers.mobile_device? && (controller_name == 'feeds') && (action_name == 'index') }) %>">
-				<div class="-ml-2 absolute bg-brand-500 border-4 border-white h-4 left-0 rounded-full w-4 z-20"></div>
-				<div class="space-x-2 flex items-baseline text-xs select-none">
-					<h2 class="font-semibold text-brand-500 uppercase">
-						<%= link_to helpers.day_of_week(group[0].to_date).titlecase, day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), data: { 'turbo-preserve-scroll': true } %>
-					</h2>
-					<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
-						<div class="text-gray-500 capitalize"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
-					<% elsif group[0].to_date < Date.today + 7 %>
-						<div class="text-gray-500 capitalize"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
-					<% else %>
-						<div class="text-gray-500 capitalize">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
-					<% end %>
+				<div class="-ml-5 flex items-center space-x-3">
+					<div class="bg-brand-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center text-xs w-content">
+						<div class="font-display font-bold text-brand-700">
+							<%= l(group[0]&.to_date, format: "%-d") %>
+						</div>
+						<div class="font-semibold text-xxs -mt-1 text-brand-600">
+							<%= l(group[0]&.to_date, format: "%^b") %>
+						</div>
+					</div>
+					<!-- <div class="absolute bg-brand-500 border-4 border-white h-4 left-0 rounded-full w-4 z-20"></div> -->
+					<div class="space-x-2 flex text-xs select-none">
+						<h2 class="font-semibold text-brand-600 uppercase flex items-center">
+							<%= link_to I18n.l(group[0]&.to_date, format: :week).titlecase, day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-lg', data: { 'turbo-preserve-scroll': true } %> 
+							<% if group[0].to_date > Date.today + 6 %>
+								<div class="text-md font-normal text-gray-400">
+									&nbsp;<%= "· daqui #{distance_of_time_in_words(group[0]&.to_date, DateTime.now)}" %>
+								</div>
+							<% end %>
+						</h2>
+					</div>
 				</div>
 			</div>
-			<div id="vertical-daily-events" class="">
+			<div id="vertical-daily-events" class="pl-7 space-y-5">
 				<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 			</div>
 		</div>
