Adjust aligned style of horizontal event

--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -1,20 +1,30 @@
 <%= content_tag :div, id: dom_id(@event, :left_sidebar), class: 'duration-300 transition-all bg-white', data: { controller: 'left-sidebar--horizontal-event', 'flip-key': dom_id(@event, :left_sidebar) } do %>
-	<div class="select-none tap-highlight-none pr-5 py-3 group relative">
-		<div class="text-sm md:text-xs md:mt-1 text-gray-500">
-			<%= helpers.day_of_week(@event.start_time).titlecase %> · <%= helpers.format_hour @event.start_time %>h
+	<div class="flex group pr-5 py-3 relative select-none space-x-2 tap-highlight-none">
+		<div class="bg-gray-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center text-xs w-content h-content">
+			<div class="font-display text-gray-700">
+				<%= l(@event.start_time, format: "%-d") %>
+			</div>
+			<div class="text-xxs -mt-1 text-gray-600">
+				<%= l(@event.start_time, format: "%^b") %>
+			</div>
 		</div>
-		<div class="mb-1 leading-snug text-gray-800 font-semibold">
-			<%= content_tag :a,
-											href:  event_path(@event),
-											data:  {
-												action:     'click->left-sidebar--horizontal-event#openEvent',
-												'event-id': @event.id
-											},
-											class: 'md:hover:underline' do %>
-				<%= @event.details_name %>
-			<% end %>
+		<div class="">
+			<div class="text-xs">
+				<%= tag.span "#{helpers.format_hour(@event.start_time)}h", class: 'font-semibold' %> · <%= l(@event.start_time.to_date, format: :week).titlecase %> · <%= "daqui #{distance_of_time_in_words(@event.start_time.to_date, DateTime.now)}" %>
+			</div>
+			<div class="mb-1 leading-snug text-gray-800 font-semibold">
+				<%= content_tag :a,
+												href:  event_path(@event),
+												data:  {
+													action:     'click->left-sidebar--horizontal-event#openEvent',
+													'event-id': @event.id
+												},
+												class: 'md:hover:underline' do %>
+					<%= @event.details_name %>
+				<% end %>
+			</div>
 		</div>
-		<%= content_tag :div, data: { action: 'click->left-sidebar--horizontal-event#unlike', 'event-id': @event.id }, class: 'absolute bottom-0 mt-3 cursor-pointer group-hover:block hidden text-red-500 text-sm underline' do %>
+		<%= content_tag :div, data: { action: 'click->left-sidebar--horizontal-event#unlike', 'event-id': @event.id }, class: 'absolute hidden bottom-0 cursor-pointer group-hover:block mt-3 pl-8 text-red-500 text-xxs underline' do %>
 			Remover
 		<% end %>
 	</div>
