--- a/web/app/components/main_sidebar/filter_component.html.erb
+++ b/web/app/components/main_sidebar/filter_component.html.erb
@@ -1,42 +1,98 @@
-<%= content_tag :div, id: 'main-sidebar--filter', data: { controller: 'main-sidebar--filter' }, class: 'space-y-6 transition-all duration-300 translate-x-32 md:ml-8 mt-8' do %>
-	<div>
-		<div class="flex items-baseline space-x-3 mb-1">
-			<h2 class="block font-bold font-display mb-2 md:text-xl text-2xl text-gray-900">
-				Dia da semana
-			</h2>
-			<%= link_to root_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-red-200 hover:text-red-600 items-baseline px-2 relative rounded-full text-brand-600' do %>
-				<svg class="fill-current mr-1 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-					<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-				</svg>
-				Limpar filtro
-			<% end if params[:day] %>
-		</div>
-		<div class="flex flex-wrap">
-			<% (Date.today..(Date.today + 7)).each do |day| %>
-				<%= link_to helpers.day_of_week(day), day_events_path(day.strftime("%d-%m-%Y")), data: { 'turbo-preserve-scroll': true }, class: helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content w-full',
-																																																																														 { 'bg-brand-200 border-brand-200 text-brand-600': params[:day] == day.strftime("%d-%m-%Y"),
-																																																																															 'text-gray-500':                                params[:day] != day.strftime("%d-%m-%Y") }) %>
-			<% end %>
-		</div>
+<%= content_tag :div, id: 'main-sidebar--filter', data: { controller: 'main-sidebar--filter', 'main-sidebar--filter-loading-value': false }, class: 'sticky top-24 transition-all duration-300 translate-x-32 md:ml-8 mt-8' do %>
+	<div class="pb-2 text-xl font-bold text-gray-900 bg-white font-display flex items-center">
+		Filtros
+		<svg data-main-sidebar--filter-target="loadingIcon" class="transition-opacity opacity-0 text-brand-600 w-7 h-7 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+			<path fill="none" d="M0 0h24v24H0V0z"/>
+			<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+		</svg>
 	</div>
-	<div>
-		<div class="flex items-baseline space-x-3 mb-1">
-			<h2 class="block font-bold font-display mb-2 md:text-xl text-2xl text-gray-900">
-				Categorias
-			</h2>
-			<%= link_to root_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-red-200 hover:text-red-600 items-baseline px-2 relative rounded-full text-brand-600' do %>
-				<svg class="fill-current mr-1 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-					<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-				</svg>
-				Limpar filtro
-			<% end if params[:category] %>
+	<div class="flex flex-wrap">
+		<div data-reflex="click->Filter#show_filter_group"
+				 data-filter-group="date"
+				 data-open="<%= @show_filter_group == 'date' %>"
+				 class="<%= helpers.class_names('text-lg border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 pl-1.5 pr-4 py-1 rounded-full select-none tap-highlight-none transform transition-all transition-colors w-content',
+																				{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:date] || @show_filter_group == 'date' }) %>">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="<%= helpers.class_names('fill-current w-5 mr-1 transform transition-transform',
+																																																 { 'rotate-180': @show_filter_group == 'date' }) %>">
+				<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+			</svg>
+			<%= @filters[:date] ? @filters[:date]&.to_date&.strftime("%d/%m/%y") : 'Data' %>
 		</div>
-		<div class="flex flex-wrap lowercase">
-			<% @categories.each do |category| %>
-				<%= link_to category.details_display_name, category_events_path(category.details_url), data: { 'turbo-preserve-scroll': true }, class: helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content w-full',
-																																																																	{ 'bg-brand-200 border-brand-200 text-brand-600': params[:category] == category&.details_url,
-																																																																	  'text-gray-500':                                params[:category] != category&.details_url }) %>
-			<% end %>
+		<div data-reflex="click->Filter#show_filter_group"
+				 data-filter-group="category"
+				 data-open="<%= @show_filter_group == 'category' %>"
+				 class="<%= helpers.class_names('text-lg border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 pl-1.5 pr-4 py-1 rounded-full select-none tap-highlight-none transform transition-all transition-colors w-content',
+																				{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:categories].present? || @show_filter_group == 'category' }) %>">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="<%= helpers.class_names('fill-current w-5 mr-1 transform transition-transform',
+																																																 { 'rotate-180': @show_filter_group == 'category' }) %>">
+				<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+			</svg>
+			<%= @filters[:categories].present? ? @filters[:categories].map { |category| Category::CATEGORIES[category]['display_name'] }.join(', ') : 'Categorias' %>
 		</div>
+		<% if @filters[:categories].present? || @filters[:date] %>
+			<div data-reflex="click->Filter#clear_filter"
+					 data-filter-group="category"
+					 class="inline-block flex justify-start items-center py-1 pr-4 pl-4 mr-2 mb-2 font-semibold text-gray-700 bg-gray-100 rounded-full transition-all transition-colors transform cursor-pointer select-none duration-50 hover:bg-red-200 hover:text-red-700 tap-highlight-none w-content">
+				Limpar
+			</div>
+		<% end %>
+	</div>
+	<div class="mt-6 space-y-6">
+		<% if @show_filter_group == 'date' %>
+			<div data-main-sidebar--filter-target="filters">
+				<div class="flex items-baseline mb-1 space-x-3">
+					<h2 class="block mb-2 font-bold text-gray-900 font-display">
+						Dia da semana
+					</h2>
+					<%#= link_to root_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-red-200 hover:text-red-600 items-baseline px-2 relative rounded-full text-brand-600' do %>
+					<!--					<svg class="mr-1 w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">-->
+					<!--						<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>-->
+					<!--					</svg>-->
+					<!--					Limpar filtro-->
+					<%# end if params[:day] %>
+				</div>
+				<div class="flex flex-wrap">
+					<% (Date.today..(Date.today + 7)).each do |day| %>
+						<div data-reflex="click->Filter#filter"
+								 data-filter-group="date"
+								 data-selected="<%= @filters[:date]&.to_date == day %>"
+								 data-filter-date="<%= day %>"
+								 class="<%= helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
+																								{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:date]&.to_date == day,
+																									'text-gray-500':                                !@filters[:date]&.to_date == day }) %>">
+							<%= helpers.day_of_week(day) %>
+						</div>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
+		<% if @show_filter_group == 'category' %>
+			<div data-main-sidebar--filter-target="filters">
+				<div class="flex items-baseline mb-1 space-x-3">
+					<h2 class="block mb-2 font-bold text-gray-900 font-display">
+						Categorias
+					</h2>
+					<%#= link_to root_path, class: 'bg-brand-100 cursor-pointer flex font-semibold hover:bg-red-200 hover:text-red-600 items-baseline px-2 relative rounded-full text-brand-600' do %>
+					<!--					<svg class="mr-1 w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">-->
+					<!--						<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>-->
+					<!--					</svg>-->
+					<!--					Limpar filtro-->
+					<%# end if params[:category] %>
+				</div>
+				<div class="flex flex-wrap lowercase">
+					<% @categories.each do |category| %>
+						<div data-reflex="click->Filter#filter"
+								 data-filter-group="category"
+								 data-selected="<%= @filters[:categories]&.include?(category.details_name) %>"
+								 data-filter-category="<%= category.details_name %>"
+								 class="<%= helpers.class_names('border cursor-pointer duration-50 flex font-semibold hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-2 mr-2 px-4 py-1 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content',
+																								{ 'bg-brand-200 border-brand-200 text-brand-600': @filters[:categories]&.include?(category.details_name),
+																									'text-gray-500':                                !@filters[:categories]&.include?(category.details_name) }) %>">
+							<%= category.details_display_name %>
+						</div>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
 	</div>
 <% end %>
