--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="vertical-daily-events" class="space-y-5">
+			<div class="space-y-5">
 				<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 			</div>
 		</div>
