--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,22 +1,22 @@
 <div id="main-sidebar--group-by-day-list" data-controller="main-sidebar--group-by-day-list" class="md:pr-5 pl-3">
 	<% @events.group_by { |e| e.start_time.strftime("%Y-%m-%d") }.each do |group| %>
 		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="ml-2 mb-5 relative">
-			<div class="<%= helpers.class_names('-ml-1 pl-1 bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 pb-3 mb-3 pt-2 md:pt-7 sticky text-gray-600 z-10',
+			<div class="<%= helpers.class_names('-ml-1 pl-1 bg-white flex-1 leading-6 md:bg-white md:leading-normal md:pb-2 pb-3 mb-3 pt-2 md:pt-5 sticky text-gray-600 z-10',
 																					{ 'top-16 pt-5':  helpers.mobile_device?,
 																						'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-36': !helpers.mobile_device? && (controller_name == 'feeds') && (action_name == 'index') }) %>">
 				<div class="flex items-center space-x-3">
-					<div class="bg-brand-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center text-xs w-content">
+					<div class="w-9 bg-brand-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center">
 						<div class="font-display font-bold text-brand-700">
 							<%= l(group[0]&.to_date, format: "%-d") %>
 						</div>
-						<div class="font-semibold text-xxs -mt-1 text-brand-600">
+						<div class="font-semibold text-xs -mt-1 text-brand-600">
 							<%= l(group[0]&.to_date, format: "%^b") %>
 						</div>
 					</div>
-					<div class="space-x-2 flex text-xs select-none">
-						<h2 class="font-semibold text-brand-600 uppercase flex items-center">
-							<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-lg', data: { 'turbo-preserve-scroll': true } do %> 
+					<div class="space-x-2 flex select-none">
+						<h2 class="font-bold text-brand-600 uppercase flex items-center">
+							<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-2xl', data: { 'turbo-preserve-scroll': true } do %>
 								<% if group[0].to_date.today? %>
 									Hoje, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
 								<% elsif group[0].to_date == Date.tomorrow %>
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="space-y-5">
+			<div class="space-y-8 pl-12 pr-1">
 				<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 			</div>
 		</div>
