Fix h2 text size in feed

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -49,7 +49,7 @@
 				<% end %>
 				<% if current_stage == :suggestions %>
 					<div class="md:mb-5">
-						<div class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
+						<div class="font-bold font-display text-gray-900 text-xl">
 							Sugestões para você
 						</div>
 					</div>
