Adjust style of feed in desktop

--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -8,7 +8,7 @@
 												action:     'click->hero--horizontal-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold inline-block leading-snug md:hover:underline text-gray-800' do %>
+											class: 'font-semibold md:text-lg inline-block leading-snug md:hover:underline text-gray-800' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-sm md:text-xs mt-2 text-gray-500">
