--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -34,7 +34,7 @@
 												action:     'click->hero--train-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold inline-block leading-snug md:hover:underline text-gray-800' do %>
+											class: 'font-semibold md:text-lg inline-block leading-snug md:hover:underline text-gray-800' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-xs text-gray-500 mt-1">
