--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -48,9 +48,13 @@
 								</div>
 							<% end %>
 							<% if @indicators&.include?(day) %>
-								<div data-indicator class="<%= helpers.class_names 'h-1 mx-auto rounded-full transform translate-y-2 w-1 bg-brand-500' %>">
+								<div class="flex justify-center space-x-0.5">
+									<% @indicators.find_all {|indic| indic == day}[...3].each do %>
+										<div data-indicator class="<%= helpers.class_names 'h-1 rounded-full transform translate-y-2 w-1 bg-brand-500' %>">
+										</div>
+									<% end %>
+								</div>
 							<% end %>
-							</div>
 						<% end %>
 					<% end %>
 				</tr>
